[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/demo6/src/logo_godot.png" type="Texture" id=2]
[ext_resource path="res://src/demo_collection/demo6/splash_screen.gd" type="Script" id=3]
[ext_resource path="res://src/demo_collection/demo6/src/ShapNode.gd" type="Script" id=4]
[ext_resource path="res://src/demo_collection/demo6/src/Logo.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
    vec4 color = vec4(1.0, 1.0, 1.0, 1.0);
	vec2 center = vec2(0.5, 0.5);
	float r = (UV.x - center.x) * (UV.x - center.x) + (UV.y - center.y) * (UV.y - center.y);
	if (r > 0.25) {
		color.a = 0.0;
	} else {
		color.a = r;
	}
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="AweSplashScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_left = 229.128
margin_top = 222.052
margin_right = 1629.13
margin_bottom = 1622.05

[node name="Logo" type="Node2D" parent="AspectNode"]
script = ExtResource( 5 )

[node name="Godot" type="Sprite" parent="AspectNode/Logo"]
position = Vector2( 0, 44.7959 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 236, 78, 552, 522 )

[node name="Circle" type="ColorRect" parent="AspectNode/Logo"]
visible = false
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShapNode" type="Node2D" parent="AspectNode/Logo"]
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="AspectNode/Logo/ShapNode"]
position = Vector2( -1.54288, 52.1203 )
points = PoolVector2Array( 0, 0, 0, 0.01 )
width = 100.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20

[node name="Title" type="Node2D" parent="AspectNode"]
position = Vector2( 737.861, 757.042 )
scale = Vector2( 0.75, 0.75 )

[node name="Node2D" type="Node2D" parent="AspectNode/Title"]
position = Vector2( -293.789, 0 )

[node name="G" type="Sprite" parent="AspectNode/Title/Node2D"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 299.569, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( -75.8597, -99.7595 )
region_enabled = true
region_rect = Rect2( 78, 740, 154, 201 )

[node name="Node2D2" type="Node2D" parent="AspectNode/Title"]
position = Vector2( -95.126, 0 )

[node name="O" type="Sprite" parent="AspectNode/Title/Node2D2"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 94.246, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( -87.5927, -99.1009 )
region_enabled = true
region_rect = Rect2( 252, 740, 179, 201 )

[node name="Node2D3" type="Node2D" parent="AspectNode/Title"]
position = Vector2( 8.50525, 0 )

[node name="D" type="Sprite" parent="AspectNode/Title/Node2D3"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 454, 742, 151, 197 )

[node name="Node2D4" type="Node2D" parent="AspectNode/Title"]
position = Vector2( 110, 0 )

[node name="O" type="Sprite" parent="AspectNode/Title/Node2D4"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( -80.783, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 87.925, -98.4703 )
region_enabled = true
region_rect = Rect2( 623, 740, 178, 201 )

[node name="Node2D5" type="Node2D" parent="AspectNode/Title"]
position = Vector2( 297, 0 )

[node name="T" type="Sprite" parent="AspectNode/Title/Node2D5"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( -271.52, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 68.1121, -95.5745 )
region_enabled = true
region_rect = Rect2( 808, 742, 138, 198 )

[node name="InfoNode" type="Sprite" parent="AspectNode"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 161, 970, 708, 137 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="AspectNode"]
